--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </nav>
       <div class="ml-3 flex items-center gap-2">
         <!-- Dexscreener (Solana gradient, softer) -->
-        <a href="https://dexscreener.com/solana/6hnju82mXsgoQkYexCXWdHw7owHb5MQnpFtPqMBpump"
+       <a href="https://dexscreener.com/solana/EvoLYbnLogXekffYFpaGKP3ZwvdKk6aFAvqodNfBbonk"
            target="_blank" rel="noopener"
            class="px-5 py-2 rounded-2xl bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] text-white font-medium hover:scale-[1.04] hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition">
           Dexscreener
@@ -111,7 +111,7 @@
           </a>
         </div>
         <div class="mt-6 text-xs opacity-70">
-          Contract: <span class="font-mono">PASTE_CONTRACT_HERE</span>
+          Contract: <span class="font-mono">EvoLYbnLogXekffYFpaGKP3ZwvdKk6aFAvqodNfBbonk</span>
         </div>
       </div>
       <div class="relative">
@@ -178,7 +178,7 @@
                 X
               </a>
               <!-- Dexscreener -->
-              <a href="https://dexscreener.com/solana/6hnju82mXsgoQkYexCXWdHw7owHb5MQnpFtPqMBpump" target="_blank" rel="noopener"
+              <a href="https://dexscreener.com/solana/EvoLYbnLogXekffYFpaGKP3ZwvdKk6aFAvqodNfBbonk" target="_blank" rel="noopener"
                  class="px-3 py-2 rounded-xl bg-gradient-to-r from-[#00ff9d] to-[#00cc66] text-black font-semibold hover:shadow-[0_0_12px_rgba(0,255,157,0.6)] transition">
                 Dexscreener
               </a>
