--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <h3 class="font-semibold mb-2">Links</h3>
             <div class="flex flex-wrap gap-2 text-sm">
               <!-- X -->
-              <a href="https://twitter.com/" target="_blank" rel="noopener"
+              <a href="https://x.com/knead_ink" target="_blank" rel="noopener"
                  class="px-3 py-2 rounded-xl bg-gradient-to-r from-[#00ff9d] to-[#00cc66] text-black font-semibold hover:shadow-[0_0_12px_rgba(0,255,157,0.6)] transition">
                 X
               </a>
@@ -277,7 +277,7 @@
           </p>
           <div class="mt-6 flex flex-wrap gap-3">
             <!-- Follow on X -->
-            <a href="https://twitter.com/" target="_blank" rel="noopener"
+            <a href="https://x.com/knead_ink" target="_blank" rel="noopener"
                class="group px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 flex items-center gap-2 transition-transform duration-200 hover:scale-[1.02]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" fill="currentColor"
                    class="w-5 h-5 transition-transform duration-200 group-hover:rotate-6 group-hover:drop-shadow-[0_0_8px_rgba(255,255,255,0.35)]">
