--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             We knead. We rise. We pump. Drop your loaf memes, raid callouts, and alpha.
             Stickers, banners, and raid copy included.
           </p>
-          <div class="mt-6 flex flex-wrap gap-3">
+          <div class="mt-6 flex flex-wrap gap-3 items-center">
             <!-- Follow on X -->
             <a href="https://x.com/knead_ink" target="_blank" rel="noopener"
                class="group px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 flex items-center gap-2 transition-transform duration-200 hover:scale-[1.02]">
