--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
-<!doctype html>
-<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>$KNEAD — The Loaf That Will Rise</title>
   <meta name="description" content="$KNEAD — the smiling bread cat on Solana. We knead. We rise. We pump. Join the loaf army." />
+
+  <!-- Open Graph -->
   <meta property="og:title" content="$KNEAD — The Loaf That Will Rise" />
   <meta property="og:description" content="We don’t just want pumps — we KNEAD them. Join the loaf army on Solana." />
-  <meta property="og:image" content="assets/loaf-hero.jpg" />
- <meta name="theme-color" content="#f59e0b" />
+  <meta property="og:image" content="https://knead.ink/assets/loaf-hero.jpg" />
+  <meta property="og:url" content="https://knead.ink/" />
+  <meta property="og:type" content="website" />
 
-<!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.png">
-<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@knead_ink" />
+  <meta name="twitter:title" content="$KNEAD — The Loaf That Will Rise" />
+  <meta name="twitter:description" content="We don’t just want pumps — we KNEAD them. Join the loaf army on Solana." />
+  <meta name="twitter:image" content="https://knead.ink/assets/loaf-hero.jpg" />
+
+  <!-- Theme -->
+  <meta name="theme-color" content="#f59e0b" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+
+  <!-- Canonical & HTTPS security -->
+  <link rel="canonical" href="https://knead.ink/">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
   <!-- Tailwind (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -30,8 +46,10 @@
       }
     }
   </script>
+
   <!-- GSAP for subtle animations -->
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+
   <style>
     /* grain overlay for a gritty degen vibe */
     .grain:before {
@@ -50,6 +68,7 @@
     }
   </style>
 </head>
+
 <body class="grain bg-zinc-950 text-zinc-100 antialiased selection:bg-loaf.neon selection:text-zinc-900">
   <!-- NAV -->
   <header class="sticky top-0 z-30 backdrop-blur supports-[backdrop-filter]:bg-zinc-950/60 border-b border-white/10">
